Integrate with Dagster

--- a/airbnb/dbt_project.yml
+++ b/airbnb/dbt_project.yml
@@ -45,3 +45,5 @@ models:
       +materialized: table  # fact folder models
 flags:
   require_generic_test_arguments_property: true
+vars:
+  user_name: default_user_name_for_this_project
